<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/metLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <Button android:id="@+id/btnAssumeDefaultValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/assumeDefaultValues"
        android:onClick="clickAssumeDefaultValues"
    />
    <Button android:id="@+id/btnSetDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnAssumeDefaultValues"
        android:text="@string/btn_setDefault"
        android:onClick="clickSetDefault"
    />
    <TextView android:id="@+id/tvLblslbpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:labelFor="@id/npbpm"
        android:text="@string/lbl_eBpm"
    />
    <NumberPicker android:id="@+id/npbpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvLblslbpm"
    />
    <TextView android:id="@+id/tvLblMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:labelFor="@id/etMeasure"
        android:text="@string/lbl_eBpc"
        android:layout_below="@id/npbpm"
    />
    <EditText android:id="@+id/etMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:inputType="number"
        android:maxLength="2"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:digits="0123456789"
        android:text="4"
        android:layout_below="@id/tvLblMeasure"
    />
    <TextView android:id="@+id/tvLblVolumeBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/etMeasure"
        android:labelFor="@id/volumeBar"
        android:text="Volume"
    />
    <SeekBar android:id="@+id/volumeBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvLblVolumeBar"
        android:max="100"
        android:progress="100"
    />
    <Button android:id="@+id/btnTapTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/tapTempo"
        android:onClick="clickTapTempo"
    />
    <ToggleButton android:id="@+id/btnPlayStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/play"
        android:textOn="@string/playing"
        android:onClick="clickPlayStop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
    />
    <Spinner android:id="@+id/noteFiguresList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toLeftOf="@id/btnPlayStop"
        android:spinnerMode="dropdown"
    />
</RelativeLayout>
